# ChangeLog for media-tv/xawtv
# Copyright 2002-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/media-tv/cvs-repo/gentoo-x86/media-tv/xawtv/ChangeLog,v 1.8 2004/01/11 13:49:58 lanius Exp $

  11 Jan 2004; Heinrich Wendel <lanius@gentoo.org> xawtv-3.86-r1.ebuild,
  xawtv-3.88.1.ebuild, xawtv-3.88.ebuild, xawtv-3.90-r1.ebuild,
  xawtv-3.90.ebuild:
  fixed motif dep

*xawtv-3.90-r1 (04 Dec 2003)

  04 Dec 2003; Donnie Berkholz <spyderous@gentoo.org>; xawtv-3.90-r1.ebuild:
  Changing media-libs/zvbi dependency to USE flag to close bug #26723.

  26 Oct 2003; Brad House <brad_mssw@gentoo.org> xawtv-3.90.ebuild:
  take out use_enable mmx for amd64 as it assumes 32bit assembly which is
  obviously incorrect

*xawtv-3.90 (21 Oct 2003)

  21 Oct 2003; Seemant Kulleen <seemant@gentoo.org> xawtv-3.90.ebuild:
  Version bump

*xawtv-3.88.1 (21 Oct 2003)

  21 Oct 2003; Martin Holzer <mholzer@gentoo.org> xawtv-3.88.1.ebuild:
  Version bumped.

  21 Jul 2003; John Mylchreest <johnm@gentoo.org>; xawtv-3.86-r1.ebuild,
  xawtv-3.88.ebuild:
  changing quicktime depend to virtual. fixes #24939

  27 Jun 2003; Seemant Kulleen <seemant@gentoo.org> xawtv-3.86-r1.ebuild:
  issue with remote display -- fix by CJ Kucera <gentoo@apocalyptech.com> in bug
  #18999

*xawtv-3.88 (18 Jun 2003)

  18 Jun 2003; Seemant Kulleen <seemant@gentoo.org> xawtv-3.86-r1.ebuild,
  xawtv-3.88.ebuild, files/tv-fonts-1.0-gentoo.diff, files/webcamrc:
  moved to media-tv

*xawtv-3.88 (18 Apr 2003)

  18 Apr 2003; Daniel Robbins <drobbins@gentoo.org> A new upstream version
  of xawtv.

*xawtv-3.86-r1 (06 Apr 2003)

  07 Apr 2003; Seemant Kulleen <seemant@gentoo.org> xawtv-3.86-r1.ebuild:
  using virtualx eclass, because the fonts now want to run sometihng in X --
  thanks to rommel in #gentoo for finding this

  06 Apr 2003; Seemant Kulleen <seemant@gentoo.org> xawtv-3.86-r1.ebuild:
  TV fonts are installed this time. Thanks to: Paul Kronenwetter