@@ -1,0 +1,3 @@
+MD5 fe4d6a482cc199fa36065cd1b6ea48a8 xawtv_3.91.tar.gz 557065
+MD5 46c68df4976306e25a1526a762371770 tv-fonts-1.0.tar.bz2 140781
+MD5 80a7a2779c4c521f5e9a28583d27c736 xaw-deinterlace-3.76-0.1.1.diff.bz2 3858
